Several bug fixes
