# api-gateway/api-gateway-service/internal/models/user/handler/handler.go
@@ -9,9 +9,11 @@ import (
 	"github.com/KhaledHosseini/play-microservices/api-gateway/api-gateway-service/internal/models"
 	"github.com/KhaledHosseini/play-microservices/api-gateway/api-gateway-service/internal/models/user/grpc"
 	"github.com/KhaledHosseini/play-microservices/api-gateway/api-gateway-service/pkg/cookie"
+	grpcutils "github.com/KhaledHosseini/play-microservices/api-gateway/api-gateway-service/pkg/grpc"
 	"github.com/KhaledHosseini/play-microservices/api-gateway/api-gateway-service/pkg/logger"
 	"github.com/KhaledHosseini/play-microservices/api-gateway/api-gateway-service/proto"
 	"github.com/gin-gonic/gin"
+	"google.golang.org/grpc/codes"
 )
 
 type UserHandler struct {
@@ -38,16 +40,16 @@ func (uh *UserHandler) CreateUser(c *gin.Context) {
 	uh.log.Info("UserHandler.CreateUser: Entered")
 	var createUserRequest models.CreateUserRequest
 	if errValid := c.ShouldBindJSON(&createUserRequest); errValid != nil {
-		uh.log.Errorf("UserHandler.CreateUser: error bind json with error: %V", errValid.Error())
+		uh.log.Errorf("UserHandler.CreateUser: error get input with error: %v", errValid.Error())
 		c.AbortWithStatusJSON(http.StatusNoContent, gin.H{"status": false, "error": errValid.Error()})
 		return
 	}
 
 	res, err := uh.GRPC_CreateUser(c, createUserRequest.ToProto())
-
 	if err != nil {
+		status := grpcutils.GetHttpStatusCodeFromGrpc(err)
 		uh.log.Errorf("UserHandler.CreateUser: User creation failed with error: %v", err.Error())
-		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"status": false, "error": err.Error()})
+		c.AbortWithStatusJSON(status, gin.H{"status": false, "error": err.Error()})
 		return
 	}
 
@@ -69,7 +71,7 @@ func (uh *UserHandler) LoginUser(c *gin.Context) {
 	var loginRequest models.LoginUserRequest
 	if errValid := c.ShouldBindJSON(&loginRequest); errValid != nil {
 		uh.log.Errorf("UserHandler.LoginUser: error bind json with error: %V", errValid.Error())
-		c.AbortWithStatusJSON(http.StatusNoContent, gin.H{"status": false, "error": errValid})
+		c.AbortWithStatusJSON(http.StatusNotAcceptable, gin.H{"status": false, "error": errValid})
 		return
 	}
 
@@ -77,7 +79,8 @@ func (uh *UserHandler) LoginUser(c *gin.Context) {
 
 	if err != nil {
 		uh.log.Errorf("UserHandler.LoginUser: User login failed with error: %v", err.Error())
-		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"status": false, "error": err.Error()})
+		status := grpcutils.GetHttpStatusCodeFromGrpc(err)
+		c.AbortWithStatusJSON(status, gin.H{"status": false, "error": err.Error()})
 		return
 	}
 
@@ -90,30 +93,36 @@ func (uh *UserHandler) LoginUser(c *gin.Context) {
 // @Summary refresh access token
 // @Description refresh access token
 // @Tags user
-// @Param   X-Refresh-Token      header    string     true        "X-Refresh-Token"
 // @Success      200      {object}  models.RefreshTokenResponse
 // @Header       200      {string}  Authorization     "Access-Token"
-// @Header       200      {string}  X-Refresh-Token    "Refresh-Token"
 // @Router /user/refresh_token [post]
 func (uh *UserHandler) RefreshAccessToken(c *gin.Context) {
 
 	uh.log.Info("UserHandler.RefreshAccessToken started")
 	refreshToken, err := cookie.GetRefreshToken(c)
 	if err != nil {
-		uh.log.Info("UserHandler.RefreshAccessToken error getting refresh token")
+		uh.log.Errorf("UserHandler.RefreshAccessToken: error getting refresh cookie %v", err.Error())
 		c.AbortWithStatusJSON(http.StatusForbidden, gin.H{"status": false, "error": "Error getting refresh token."})
 		return
 	}
 
 	res, err := uh.GRPC_RefreshAccessToken(c, &proto.RefreshTokenRequest{RefreshToken: refreshToken})
-
 	if err != nil {
-		uh.log.Errorf("UserHandler.RefreshAccessToken: refresh access token failed with error: %v", err.Error())
-		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"status": false, "error": err.Error()})
+		uh.log.Errorf("UserHandler.RefreshAccessToken: error refreshing cookie: %v", err.Error())
+		//If the error is unauthenticated, it means our refresh token has expired. so we clear the auth cookies.
+		grpcCode := grpcutils.GetGRPCStatus(err).Code()
+		switch grpcCode {
+		case codes.Unauthenticated:
+			uh.cookieManager.SetAccessToken(c, "", 0)
+			uh.cookieManager.SetRefreshToken(c, "", 0)
+			c.JSON(http.StatusNetworkAuthenticationRequired, &models.RefreshTokenResponse{Message: "please login again."})
+			return
+		}
+		status := grpcutils.GetHttpStatusCodeFromGrpc(err)
+		c.AbortWithStatusJSON(status, gin.H{"status": false, "error": err.Error()})
 		return
 	}
 	uh.log.Info("UserHandler.RefreshAccessToken refresh token success.")
-
 	uh.cookieManager.SetAccessToken(c, res.AccessToken, res.AccessTokenAge)
 
 	c.JSON(http.StatusOK, &models.RefreshTokenResponse{Message: "access-token refresh success."})
@@ -122,29 +131,22 @@ func (uh *UserHandler) RefreshAccessToken(c *gin.Context) {
 // @Summary logout user
 // @Description logout user
 // @Tags user
-// @Param   Authorization      header    string     true        "Authorization: Access token"
-// @Param   X-Refresh-Token      header    string     true        "X-Refresh-Token"
 // @Success      200      {object}  models.LogOutResponse
 // @Router /user/logout [post]
 func (uh *UserHandler) LogOutUser(c *gin.Context) {
-	accessToken, err := cookie.GetAccessToken(c)
-	if err != nil {
-		uh.log.Info("UserHandler.LogOutUser error getting access token")
-		c.AbortWithStatusJSON(http.StatusForbidden, gin.H{"status": false, "error": "Error getting access token."})
-		return
-	}
 
-	refreshToken, err2 := cookie.GetRefreshToken(c)
-	if err2 != nil {
-		uh.log.Info("UserHandler.LogOutUser error getting refresh token")
+	refreshToken, err := cookie.GetRefreshToken(c)
+	if err != nil {
+		uh.log.Errorf("UserHandler.LogOutUser: error getting refresh cookie %v", err.Error())
 		c.AbortWithStatusJSON(http.StatusForbidden, gin.H{"status": false, "error": "Error getting refresh token."})
 		return
 	}
 
-	res, err := uh.GRPC_LogOutUser(c, &proto.LogOutRequest{AccessToken: accessToken, RefreshToken: refreshToken})
-
+	res, err := uh.GRPC_LogOutUser(c, &proto.LogOutRequest{RefreshToken: refreshToken})
 	if err != nil {
-		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"status": false, "error": err.Error()})
+		uh.log.Errorf("UserHandler.LogOutUser error logging out: %v", err.Error())
+		status := grpcutils.GetHttpStatusCodeFromGrpc(err)
+		c.AbortWithStatusJSON(status, gin.H{"status": false, "error": err.Error()})
 		return
 	}
 	uh.cookieManager.SetAccessToken(c, "", 0)
@@ -153,27 +155,21 @@ func (uh *UserHandler) LogOutUser(c *gin.Context) {
 	c.JSON(http.StatusOK, &models.LogOutResponse{Message: res.Message})
 }
 
-// @Summary Get user by id
-// @Description Get user by id
+// @Summary Get user
+// @Description Get user
 // @Tags user
 // @Produce json
-// @Param   id      path    string     true        "some id"
 // @Success 200 {object} models.GetUserResponse
-// @Router /user/{id} [get]
+// @Router /user/get [get]
 func (uh *UserHandler) GetUser(c *gin.Context) {
 
-	// get user id from cookie?
+	uh.log.Infof("Enter GetUser: %v", c.Request.Context())
 
-	userId, err := strconv.ParseInt(c.Param("id"), 10, 32)
+	res, err := uh.GRPC_GetUser(c.Request.Context(), &proto.GetUserRequest{})
 	if err != nil {
-		c.AbortWithStatusJSON(400, gin.H{"error": "Invalid or no id parameter"})
-		return
-	}
-
-	res, err := uh.GRPC_GetUser(c, &proto.GetUserRequest{Id: int32(userId)})
-
-	if err != nil {
-		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"status": false, "error": err.Error()})
+		uh.log.Errorf("UserHandler.GetUser error getting user: %v", err.Error())
+		status := grpcutils.GetHttpStatusCodeFromGrpc(err)
+		c.AbortWithStatusJSON(status, gin.H{"status": false, "error": err.Error()})
 		return
 	}
 
@@ -191,22 +187,23 @@ func (uh *UserHandler) GetUser(c *gin.Context) {
 func (uh *UserHandler) ListUsers(c *gin.Context) {
 	page, err := strconv.ParseInt(c.Query("page"), 10, 32)
 	if err != nil {
-		// Handle missing or invalid page parameter
-		c.JSON(400, gin.H{"error": "Invalid page parameter"})
+		uh.log.Errorf("UserHandler.ListUsers no page parameters is provided: %v", err.Error())
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid page parameter"})
 		return
 	}
 
 	size, err := strconv.ParseInt(c.Query("size"), 10, 32)
 	if err != nil {
-		// Handle missing or invalid size parameter
-		c.JSON(400, gin.H{"error": "Invalid size parameter"})
+		uh.log.Errorf("UserHandler.ListUsers no size parameters is provided: %v", err.Error())
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid size parameter"})
 		return
 	}
 
-	res, err := uh.GRPC_ListUsers(c, &proto.ListUsersRequest{Page: page, Size: size})
-
+	res, err := uh.GRPC_ListUsers(c.Request.Context(), &proto.ListUsersRequest{Page: page, Size: size})
 	if err != nil {
-		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"status": false, "error": err.Error()})
+		uh.log.Errorf("UserHandler.ListUsers error getting the user: %v", err.Error())
+		status := grpcutils.GetHttpStatusCodeFromGrpc(err)
+		c.AbortWithStatusJSON(status, gin.H{"status": false, "error": err.Error()})
 		return
 	}
 
